# swagger.json
@@ -5,11 +5,31 @@
 		"description": "Description",
 		"version": "1.0.0"
 	},
-	"host": "project2-mqo5.onrender.com",
+	"host": "project2-mqo5.onrender.com/",
 	"basePath": "/",
 	"schemes": ["https"],
 	"paths": {
 		"/": {
+			"get": {
+				"description": "",
+				"responses": {
+					"default": {
+						"description": ""
+					}
+				}
+			}
+		},
+		"/login": {
+			"get": {
+				"description": "",
+				"responses": {
+					"default": {
+						"description": ""
+					}
+				}
+			}
+		},
+		"/logout": {
 			"get": {
 				"description": "",
 				"responses": {
@@ -75,6 +95,9 @@
 					},
 					"204": {
 						"description": "No Content"
+					},
+					"401": {
+						"description": "Unauthorized"
 					},
 					"500": {
 						"description": "Internal Server Error"
@@ -143,6 +166,9 @@
 					"204": {
 						"description": "No Content"
 					},
+					"401": {
+						"description": "Unauthorized"
+					},
 					"500": {
 						"description": "Internal Server Error"
 					}
@@ -162,6 +188,9 @@
 				"responses": {
 					"204": {
 						"description": "No Content"
+					},
+					"401": {
+						"description": "Unauthorized"
 					},
 					"500": {
 						"description": "Internal Server Error"
@@ -215,6 +244,9 @@
 					},
 					"204": {
 						"description": "No Content"
+					},
+					"401": {
+						"description": "Unauthorized"
 					},
 					"500": {
 						"description": "Internal Server Error"
@@ -283,6 +315,9 @@
 					"204": {
 						"description": "No Content"
 					},
+					"401": {
+						"description": "Unauthorized"
+					},
 					"500": {
 						"description": "Internal Server Error"
 					}
@@ -302,6 +337,9 @@
 				"responses": {
 					"204": {
 						"description": "No Content"
+					},
+					"401": {
+						"description": "Unauthorized"
 					},
 					"500": {
 						"description": "Internal Server Error"
